--- a/Nestle_service_api/appsettings.json
+++ b/Nestle_service_api/appsettings.json
@@ -9,7 +9,9 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     // "DbNestle_CEM": "Data Source=pro_db.fcc.co.th;Initial Catalog=Nestle_CEM;Persist Security Info=True;User ID=app_cem;Password=cem@#2021"
-    "DbNestle_CEM": "Data Source=dev.fcc.co.th;Initial Catalog=Nestle_CEM_DEMO;Persist Security Info=True;User ID=app_cem;Password=cem@#2021"
+    "DbNestle_CEM": "Data Source=dev.fcc.co.th;Initial Catalog=Nestle_CEM_DEMO;Persist Security Info=True;User ID=app_cem;Password=cem@#2021",
+    //"DbNestle_CEM": "Data Source=.\\sqlexpress;Initial Catalog=Nestle_CEM_DEMO;Persist Security Info=True;User ID=app_cem;Password=cem@#2021"
+
     //"DbNestle_CEM": "Data Source=L0740_PUTSAYAM8;Initial Catalog=Nestle_CEM_DEMO;Persist Security Info=True;User ID=sa;Password=S@mjet63"
   }
 }
