--- a/Nestle_service_api/appsettings.json
+++ b/Nestle_service_api/appsettings.json
@@ -11,7 +11,7 @@
     // "DbNestle_CEM": "Data Source=pro_db.fcc.co.th;Initial Catalog=Nestle_CEM;Persist Security Info=True;User ID=app_cem;Password=cem@#2021"
     //"DbNestle_CEM": "Data Source=dev.fcc.co.th;Initial Catalog=Nestle_CEM_DEMO;Persist Security Info=True;User ID=app_cem;Password=cem@#2021"
     //"DbNestle_CEM": "Data Source=.\\sqlexpress;Initial Catalog=Nestle_CEM_DEMO;Persist Security Info=True;User ID=app_cem;Password=cem@#2021"
-    "DbNestle_CEM": "Data Source=203.154.216.230;Initial Catalog=Nestle_CEM_DEMO;Persist Security Info=True;User ID=app_cem;Password=cem@#2021"
-    //"DbNestle_CEM": "Data Source=L0740_PUTSAYAM8;Initial Catalog=Nestle_CEM_DEMO;Persist Security Info=True;User ID=sa;Password=S@mjet63"
+    //"DbNestle_CEM": "Data Source=203.154.216.230;Initial Catalog=Nestle_CEM_DEMO;Persist Security Info=True;User ID=app_cem;Password=cem@#2021"
+    "DbNestle_CEM": "Data Source=L0740_PUTSAYAM8;Initial Catalog=Nestle_CEM_DEMO;Persist Security Info=True;User ID=sa;Password=S@mjet63"
   }
 }
